# renderdoc

./: .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  LICENSE  METADATA  MODIFICATIONS  build_bazel.sh
kokoro/linux/: build.sh  common.cfg  presubmit.cfg
kokoro/windows/: build.bat  common.cfg  presubmit.cfg
qrenderdoc/Code/: CaptureContext.cpp  CaptureContext.h  qrenderdoc.cpp
qrenderdoc/Code/Interface/: RemoteHost.h
qrenderdoc/Windows/: MainWindow.cpp  MainWindow.h
renderdoc/: CMakeLists.txt  renderdoc.vcxproj  renderdoc.vcxproj.filters
renderdoc/api/replay/: basic_types.h  rdcstr.h  renderdoc_replay.h  replay_enums.h  stringise.h  structured_data.h  vk_pipestate.h
renderdoc/common/: common.h  globalconfig.h  threading.h
renderdoc/core/: core.cpp  core.h  intervals.h  remote_server.cpp  resource_manager.cpp  resource_manager.h
renderdoc/driver/d3d11/: d3d11_device.cpp
renderdoc/driver/d3d12/: d3d12_device.cpp
renderdoc/driver/gl/: cgl_platform.cpp  gl_driver.cpp
renderdoc/driver/shaders/spirv/: spirv_disassemble.cpp
renderdoc/driver/vulkan/: CMakeLists.txt  imagestate_tests.cpp  imgrefs_tests.cpp  renderdoc_vulkan.vcxproj  renderdoc_vulkan.vcxproj.filters  vk_common.cpp  vk_common.h  vk_core.cpp  vk_core.h  vk_debug.cpp  vk_dispatchtables.cpp  vk_hookset_defs.h  vk_image_states.cpp  vk_initstate.cpp  vk_linux.cpp  vk_manager.cpp  vk_manager.h  vk_next_chains.cpp  vk_overlay.cpp  vk_pixelhistory.cpp  vk_posix.cpp  vk_rendertext.cpp  vk_rendertexture.cpp  vk_replay.cpp  vk_resources.cpp  vk_resources.h  vk_serialise.cpp  vk_stringise.cpp
renderdoc/driver/vulkan/official/: vk_layer.h  vk_layer_dispatch_table.h  vulkan.h  vulkan_core.h  vulkan_yeti.h
renderdoc/driver/vulkan/wrappers/: vk_cmd_funcs.cpp  vk_descriptor_funcs.cpp  vk_device_funcs.cpp  vk_draw_funcs.cpp  vk_misc_funcs.cpp  vk_queue_funcs.cpp  vk_resource_funcs.cpp  vk_sync_funcs.cpp  vk_wsi_funcs.cpp
renderdoc/os/: os_specific.h
renderdoc/os/posix/: posix_network.cpp  posix_process.cpp
renderdoc/os/posix/linux/: linux_callstack.cpp  linux_stringio.cpp
renderdoc/os/win32/: win32_network.cpp
renderdoc/replay/: capture_file.cpp  renderdoc_serialise.inl
renderdoc/serialise/: lz4io.cpp  rdcfile.cpp  rdcfile.h
renderdoc/serialise/codecs/: .gitattibutes  CMakeLists.txt  build_ggp.sh  build_ggp_trace_package.cmd  build_vs2015.bat  build_vs2015_ninja.bat  build_vs2017.bat  build_vs2017_ninja.bat  build_xlib.sh  build_yeti.sh  build_yeti_trace_package.cmd  check_spv_shaders.bat  clean_codegen_sample_cpp_trace.bat  copy_code_gen.bat  embed_files.bat  embed_files.py  ext_object.h  generate_linux_make.sh  generate_test_package.cmd  generate_vs2015_x64.bat  generate_vs2017_x64.bat  generate_win_ninja.bat  generate_yeti_make.sh  intervals.h  run_ggp_trace_package.cmd  run_yeti_trace_package.cmd  vk_cpp_codec.cpp  vk_cpp_codec_common.h  vk_cpp_codec_file.h  vk_cpp_codec_state.cpp  vk_cpp_codec_state.h  vk_cpp_codec_tracker.cpp  vk_cpp_codec_tracker.h  vk_cpp_codec_tracker_cmd.cpp  vk_cpp_codec_tracker_filter.cpp  vk_cpp_codec_tracker_internal.cpp  vk_cpp_codec_tracker_scan.cpp  vk_cpp_codec_tracker_state.cpp  vk_cpp_codec_writer.cpp  vk_cpp_codec_writer.h  (+2 more)
renderdoc/serialise/codecs/amd_shader_info_shim/: CMakeLists.txt  shim_vulkan.cpp  shim_vulkan.h  shim_vulkan_base.cpp  utils.cpp  utils.h
renderdoc/serialise/codecs/cpp_codec/: cpp_codec.cpp  cpp_codec_common.h  cpp_codec_file.h  cpp_codec_resource.cpp  cpp_codec_resource.h  cpp_codec_resource_files.cpp  cpp_codec_transformer.cpp  cpp_codec_transformer.h  cpp_codec_writer.cpp  cpp_codec_writer.h  embed_files.bat  embed_files.py  vk_cpp_codec_transformer.h  vk_cpp_codec_writer.cpp  vk_cpp_codec_writer.h
renderdoc/serialise/codecs/cpp_codec/resource_files/templates/: CPPTemplates.tmpl  VkTemplates.tmpl
renderdoc/serialise/codecs/cpp_codec/resource_files/vulkan/: CMakeLists.txt  build_vs2017.bat  build_vs2017_ninja.bat  build_vs2019.bat  build_vs2019_ninja.bat
renderdoc/serialise/codecs/cpp_codec/resource_files/vulkan/helper/: format_helper.h  format_size_and_aspect.cpp  helper.cpp  helper.h
renderdoc/serialise/codecs/cpp_codec/resource_files/vulkan/sample_cpp_trace/: CMakeLists.txt  common.h  main_win.cpp
renderdoc/serialise/codecs/cpp_codec/templates/: cpp_funcs.cpp  cpp_templates.cpp  cpp_templates.h  exec.cpp  exec.h  exec_tests.cpp  func.cpp  func.h  func_tests.cpp  lex.cpp  lex.h  lex_tests.cpp  parse.cpp  parse.h  parse_tests.cpp  value.cpp  value.h  writer.cpp  writer.h
renderdoc/serialise/codecs/fix_renderpass/: CMakeLists.txt  shim_vulkan.cpp  shim_vulkan.h
renderdoc/serialise/codecs/gold_reference_shim/: CMakeLists.txt  format_conversion.cpp  shim_vulkan.cpp  shim_vulkan.h  shim_vulkan_base.cpp  utils.cpp  utils.h
renderdoc/serialise/codecs/helper/: CMakeLists.txt  format_helper.h  format_size_and_aspect.cpp  helper.cpp  helper.h
renderdoc/serialise/codecs/profiling_shim/: CMakeLists.txt  shim_vulkan.cpp  shim_vulkan.h  utils.cpp
renderdoc/serialise/codecs/rdoc_auto_capture_shim/: CMakeLists.txt  renderdoc_app.h  shim_vulkan.cpp  shim_vulkan.h  shim_vulkan_base.cpp
renderdoc/serialise/codecs/sample_cpp_shim/: CMakeLists.txt  shim_vulkan.cpp  shim_vulkan.h
renderdoc/serialise/codecs/sample_cpp_trace/: CMakeLists.txt  common.h  main_ggp.cpp  main_win.cpp  main_xlib.cpp  main_yeti.cpp
renderdoc/serialise/codecs/timestamp_profiling_shim/: CMakeLists.txt  shim_vulkan.cpp  shim_vulkan.h  shim_vulkan_base.cpp  utils.cpp  utils.h
renderdoc/serialise/codecs/validation_shim/: CMakeLists.txt  shim_vulkan.cpp  shim_vulkan.h  shim_vulkan_base.cpp
renderdoccmd/: CMakeLists.txt  renderdoccmd.cpp  renderdoccmd_linux.cpp
scripts/: build.bat  yeti_dist.sh
util/test/: run_tests.py
util/test/demos/: CMakeLists.txt  demos.vcxproj  demos.vcxproj.filters
util/test/demos/vk/: vk_helpers.h  vk_image_queue_families.cpp  vk_separate_depth_stencil_layouts.cpp  vk_test.cpp  vk_test.h
util/test/rdtest/: testcase.py  util.py
util/test/tests/Vulkan/: VK_Image_Queue_Families.py  VK_Separate_Depth_Stencil_Layouts.py
