SET (THIS_PROJECT_NAME helper)
PROJECT(${THIS_PROJECT_NAME})

ADD_LIBRARY(${THIS_PROJECT_NAME} STATIC "helper.h" "helper.cpp"
            format_helper.h format_size_and_aspect.cpp)

TARGET_COMPILE_DEFINITIONS(${THIS_PROJECT_NAME}
    PRIVATE UNICODE _UNICODE)
IF (NOT WIN32)
    TARGET_COMPILE_DEFINITIONS(${THIS_PROJECT_NAME}
        PRIVATE HELPER_COMPILE_STATIC_LIB)
ENDIF ()

TARGET_LINK_LIBRARIES(${THIS_PROJECT_NAME} vulkan)

SET_TARGET_PROPERTIES(${THIS_PROJECT_NAME} PROPERTIES
                      OUTPUT_NAME ${THIS_PROJECT_NAME}
                      ARCHIVE_OUTPUT_DIRECTORY "${LIBRARY_OUTPUT_PATH}/${THIS_PROJECT_NAME}"
                      RUNTIME_OUTPUT_DIRECTORY "${LIBRARY_OUTPUT_PATH}/${THIS_PROJECT_NAME}"
                      LIBRARY_OUTPUT_DIRECTORY "${LIBRARY_OUTPUT_PATH}/${THIS_PROJECT_NAME}"
                      POSITION_INDEPENDENT_CODE ON)
